--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
+    "react-wheel-of-prizes": "^1.0.9",
     "wagmi": "^0.7.15"
   },
   "devDependencies": {
