--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "ethers": "^5.7.2",
     "next": "13.0.3",
     "react": "18.2.0",
+    "react-custom-roulette": "^1.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
-    "react-wheel-of-prizes": "^1.0.9",
     "wagmi": "^0.7.15"
   },
   "devDependencies": {
