--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-custom-roulette": "^1.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
+    "react-qr-code": "^2.0.8",
+    "react-toastify": "^9.1.1",
     "wagmi": "^0.7.15"
   },
   "devDependencies": {
