--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "react-qr-code": "^2.0.8",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-toastify": "^9.1.1",
-    "wagmi": "^0.7.15"
+    "react-zxing": "^1.0.5",
+    "wagmi": "^0.7.15",
+    "webrtc-adapter": "^8.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
