--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "react-qr-code": "^2.0.8",
-    "react-qr-reader": "^3.0.0-beta-1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-toastify": "^9.1.1",
     "react-zxing": "^1.0.5",
     "wagmi": "^0.7.15",
